--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,23 @@
 {
   "name": "sukohi/group-wise-filter",
-  "description": "A Laravel package to get row(s) with the group-wise maximum or minimum.",
+  "description": "",
   "authors": [
     {
       "name": "Sukohi",
-      "email": "capilano.sukohi@gmail.com"
+      "email": "capilano.whoops-report@gmail.com"
     }
   ],
-  "license": "MIT",
   "require": {
-    "laravel/framework": "~5.0"
+    "php": ">=5.4.0",
+    "illuminate/support": "4.2.*"
   },
   "autoload": {
-    "psr-4": {
+    "classmap": [
+      "src/migrations"
+    ],
+    "psr-0": {
       "Sukohi\\GroupWiseFilter\\": "src/"
     }
   },
   "minimum-stability": "stable"
 }
-
